# sox-android

./: settings.gradle
app/: CmakeLists.txt  build.gradle
app/src/androidTest/java/com/smzh/com/sox_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/smzh/com/sox/: Jni.java  MainActivity.kt
app/src/main/java/com/smzh/com/sox_android/: MainActivity.kt
app/src/main/jni/: jni.cpp
app/src/main/jni/sox/: CMakeLists.txt
app/src/main/jni/sox/libgsm/: CMakeLists.txt
app/src/main/jni/sox/src/: libsox_i.c  soxconfig.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/smzh/com/sox_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
